--- a/teoe-quintessence/configs/legendarytooltips-common.toml
+++ b/teoe-quintessence/configs/legendarytooltips-common.toml
@@ -3,8 +3,8 @@
 #
 # *** READ THIS FIRST ***
 #
-# By default, this mod does not apply special borders to most items.  It was designed to work well with mod packs
-# where the available selection of items can vary widely, so it is up to the user or mod pack designer to customize as needed.
+# By default, this mod does not apply special borders to most items.  It was designed to work well with mod packs where
+# the available selection of items can vary widely, so it is up to the user or mod pack designer to customize as needed.
 # There are many options available for setting up which custom borders (also called frames) apply to which items.  Follow these steps:
 #   1. Decide which items you want to have custom borders, and which borders.  Note that each custom border has a number associated with it (starting at 0).
 #   2. For each custom border you want to use, fill out the associated list in the "definitions" section.  This will be filled out with a list of "selectors",
@@ -41,13 +41,13 @@
 	#    NBT tag - & followed by tag name and optional comparator (=, >, <, or !=) and value, in the format <tag><comparator><value> or just <tag>.  Examples: "&Damage=0", "&Tier>1", "&map!=128", "&Enchantments"
 	[client.definitions]
 		level0_entries = ["kubejs:quintessence", "extendedcrafting:the_ultimate_block", "extendedcrafting:the_ultimate_ingot", "extendedcrafting:the_ultimate_nugget", "extendedcrafting:the_ultimate_catalyst", "extendedcrafting:ultimate_singularity", "extendedcrafting:ultimate_table", "extendedcrafting:ultimate_auto_table", "extendedcrafting:compressor", "create:creative_crate", "create:creative_blaze_cake", "thermal:rf_coil_creative_augment", "tconstruct:creative_slot"]
-		level1_entries = ["minecraft:dragon_egg", "minecraft:dragon_breath", "minecraft:totem_of_undying", "minecraft:heart_of_the_sea", "extendedcrafting:ultimate_catalyst", "packagedexcrafting:ultimate_crafter", "extendedcrafting:enhanced_ender_ingot", "extendedcrafting:crystaltine_ingot", "quantumquarryplus:quantum_quarry_plus"]
+		level1_entries = ["minecraft:dragon_egg", "minecraft:dragon_breath", "minecraft:totem_of_undying", "minecraft:heart_of_the_sea", "extendedcrafting:ultimate_catalyst", "extendedcrafting:enhanced_ender_ingot", "extendedcrafting:crystaltine_ingot", "packagedexcrafting:ultimate_crafter", "quantumquarryplus:quantum_quarry_plus"]
 		level2_entries = ["minecraft:nether_star", "extendedcrafting:nether_star_block", "extendedcrafting:ender_star", "quantumquarryplus:endercell"]
 		level3_entries = ["lightmanscurrency:coinblock_netherite", "lightmanscurrency:coinpile_netherite", "lightmanscurrency:coin_netherite", "quantumquarryplus:endercell"]
-		level4_entries = ["!epic", "lightmanscurrency:coinblock_diamond", "lightmanscurrency:coinpile_diamond", "lightmanscurrency:coin_diamond", "quantumquarryplus:quarry_framw", "extendedcrafting:elite_table", "extendedcrafting:elite_auto_table"]
-		level5_entries = ["!rare", "minecraft:elytra", "lightmanscurrency:coinblock_emerald", "lightmanscurrency:coinpile_emerald", "lightmanscurrency:coin_emerald", "waystones:warp_stone", "quantumquarryplus:ender_obsidian", "quantumquarryplus:upgrade_base", "quantumquarryplus:pump_upgrade", "quantumquarryplus:filter_upgrade", "extendedcrafting:advanced_table", "extendedcrafting:advanced_auto_table", "ae2:name_press"]
-		level6_entries = ["!uncommon", "kubejs:portal_catalyst", "lightmanscurrency:trading_core", "waystones:return_scroll", "waystones:bound_scroll", "waystoneswarp_scroll", "quantumquarryplus:earth_orb", "extendedcrafting:basic_table", "extendedcrafting:basic_auto_table", "longfallboots:longfallboots", "ae2:silicon_press", "ae2:logic_processor_press", "ae2:calculation_processor_press", "ae2:engineering_processor_press"]
-		level7_entries = ["extendedcrafting:crafting_core", "extendedcrafting:pedestal", "extendedcrafting:frame"]
+		level4_entries = ["!epic", "lightmanscurrency:coinblock_diamond", "lightmanscurrency:coinpile_diamond", "lightmanscurrency:coin_diamond", "extendedcrafting:elite_table", "extendedcrafting:elite_auto_table", "quantumquarryplus:quarry_framw"]
+		level5_entries = ["!rare", "minecraft:elytra", "lightmanscurrency:coinblock_emerald", "lightmanscurrency:coinpile_emerald", "lightmanscurrency:coin_emerald", "ae2:name_press", "extendedcrafting:advanced_table", "extendedcrafting:advanced_auto_table", "quantumquarryplus:ender_obsidian", "quantumquarryplus:upgrade_base", "quantumquarryplus:pump_upgrade", "quantumquarryplus:filter_upgrade", "rftoolsbase:infused_enderpearl", "rftoolsbase:infused_diamond", "waystones:warp_stone"]
+		level6_entries = ["!uncommon", "kubejs:portal_catalyst", "lightmanscurrency:trading_core", "ae2:silicon_press", "ae2:logic_processor_press", "ae2:calculation_processor_press", "ae2:engineering_processor_press", "extendedcrafting:basic_table", "extendedcrafting:basic_auto_table", "longfallboots:longfallboots", "quantumquarryplus:earth_orb", "waystones:return_scroll", "waystones:bound_scroll", "waystoneswarp_scroll"]
+		level7_entries = ["extendedcrafting:crafting_core", "extendedcrafting:pedestal", "extendedcrafting:frame", "extendedcrafting:ender_crafter", "extendedcrafting:ender_alternator", "packagedexcrafting:marked_pedestal"]
 		level8_entries = []
 		level9_entries = []
 		level10_entries = []
@@ -59,60 +59,51 @@
 		# Enter blacklist selectors here using the same format as above. Any items that match these selectors will NOT show a border.
 		blacklist = []
 
-	# Set border priorities here.  This should be a list of numbers that correspond to border levels, with numbers coming first being higher priority.  Optionally, -1 can be inserted to indicate relative priority of data and api-defined borders.  If you don't know what that means, don't worry about it.
+	# Set border priorities here.  This should be a list of numbers that correspond to border levels, with numbers coming first being higher priority.
+	# Optionally, -1 can be inserted to indicate relative priority of data and api-defined borders.  If you don't know what that means, you don't need to worry about it.
 	[client.priorities]
 		priorities = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
 
-	# The start and end border colors and background colors of each level.
-	# Note that they can be entered as any one of: a decimal or hex color code in the format 0xAARRGGBB or 0xRRGGBB, OR a string color name or color code.
-	# Examples: 0xFFFF00, 0xFF73D984, 4290445567, "red", "#FFCC00" are all valid.
+	# The colors used for each tooltip, in this order: top border color, bottom border color, top background color, bottom background color.
+	# None of these colors are required, though any colors not specified will be replaced with the default tooltip colors.
+	#
+	# VALID COLOR FORMATS
+	#   Hex color code - A hex color code is preceded by # or 0x and must be quoted.  Supports 3, 4, 6, or 8 digit codes in the formats RGB, ARGB, RRGGBB, AARRGGBB.
+	#     Examples: "#F4C", "0xFEE0", "#40FF2E", "#CC00E2EE"
+	#
+	#   Decimal color code - A decimal color code, which is just a hex color code converted to decimal.  May or may not be quoted.
+	#     Examples: 15614720, "4278251143"
+	#
+	#   Minecraft color name - One of the standard 16 Minecraft color names.  Must be quoted.
+	#     Examples: "red", "dark_purple", "gold"
+	#
+	#   Web color name - One of the standard 140 web/HTML color names or "transparent".  Must be quoted.
+	#     Examples: "chartreuse", "darkorange", "deeppink", "deepskyblue"
+	#
+	#   Modifiers - Colors specified in any of the above formats can be modified by using modifiers.
+	#         Modifiers are specified after any color in the format "<+, -, or =><h, s, v, r, g, b, or a><amount>".
+	#         The letters represent h - hue, s - saturation, v - value, r - red, g - green, b - blue, a - alpha.
+	#         Valid amounts are 0 to 255 for all types except hue, which accepts 0 to 359.
+	#     Examples: "red+h15", "#saddlebrown-v20+s5", "10_aqua_aqua+v15-h5", "#F4C-r15-v10=a40"
+	#
+	#   Animated color - An animated color that fades from one to another in sequence.
+	#         A string in the format "<duration in seconds>_<list of color definitions separated by underscores>".  Must be quoted.
+	#     Examples: "10_black_#7FFF00", "5.5_gold_orange_orangered", "20_red_orange_yellow_green_blue_purple"
 	[client.colors]
-		level0_start_color = "#9658D3"
-		level0_end_color = "#6D4199"
-		level0_bg_color = -266991104
-		level1_start_color = "#F4C242"
-		level1_end_color = "#EF8847"
-		level1_bg_color = -266991104
-		level2_start_color = "#FFFFFF"
-		level2_end_color = "#DDDDDD"
-		level2_bg_color = -266991104
-		level3_start_color = "#E59710"
-		level3_end_color = "#E58C10"
-		level3_bg_color = -266991104
-		level4_start_color = "#B17AE8"
-		level4_end_color = "#A071CE"
-		level4_bg_color = -266991104
-		level5_start_color = "#5CB3FF"
-		level5_end_color = "#1793FF"
-		level5_bg_color = -266991104
-		level6_start_color = "#45BC38"
-		level6_end_color = "#39992F"
-		level6_bg_color = -266991104
-		level7_start_color = "#212121"
-		level7_end_color = "#0A0A0A"
-		level7_bg_color = -266991104
-		level8_start_color = -6723294
-		level8_end_color = -10864099
-		level8_bg_color = -266991104
-		level9_start_color = -6723294
-		level9_end_color = -10864099
-		level9_bg_color = -266991104
-		level10_start_color = -6723294
-		level10_end_color = -10864099
-		level10_bg_color = -266991104
-		level11_start_color = -6723294
-		level11_end_color = -10864099
-		level11_bg_color = -266991104
-		level12_start_color = -6723294
-		level12_end_color = -10864099
-		level12_bg_color = -266991104
-		level13_start_color = -6723294
-		level13_end_color = -10864099
-		level13_bg_color = -266991104
-		level14_start_color = -6723294
-		level14_end_color = -10864099
-		level14_bg_color = -266991104
-		level15_start_color = -6723294
-		level15_end_color = -10864099
-		level15_bg_color = -266991104
+		level0_colors = ["#9658D3", "#6D4199", "#F0160A00", "#F0160A00"]
+		level1_colors = ["#F4C242", "#EF8847", "#F0160A00", "#F0160A00"]
+		level2_colors = ["#FFFFFF", "#DDDDDD", "#F0160A00", "#F0160A00"]
+		level3_colors = ["#E59710", "#E58C10", "#F0160A00", "#F0160A00"]
+		level4_colors = ["#B17AE8", "#A071CE", "#F0160A00", "#F0160A00"]
+		level5_colors = ["#5CB3FF", "#1793FF", "#F0160A00", "#F0160A00"]
+		level6_colors = ["#45BC38", "#39992F", "#F0160A00", "#F0160A00"]
+		level7_colors = ["#212121", "#0A0A0A", "#F0160A00", "#F0160A00"]
+		level8_colors = ["#FF996922", "#FF5A3A1D", "#F0160A00", "#F0160A00"]
+		level9_colors = ["#FF996922", "#FF5A3A1D", "#F0160A00", "#F0160A00"]
+		level10_colors = ["#FF996922", "#FF5A3A1D", "#F0160A00", "#F0160A00"]
+		level11_colors = ["#FF996922", "#FF5A3A1D", "#F0160A00", "#F0160A00"]
+		level12_colors = ["#FF996922", "#FF5A3A1D", "#F0160A00", "#F0160A00"]
+		level13_colors = ["#FF996922", "#FF5A3A1D", "#F0160A00", "#F0160A00"]
+		level14_colors = ["#FF996922", "#FF5A3A1D", "#F0160A00", "#F0160A00"]
+		level15_colors = ["#FF996922", "#FF5A3A1D", "#F0160A00", "#F0160A00"]
 
