--- a/teoe-quintessence/configs/apotheosis/names.cfg
+++ b/teoe-quintessence/configs/apotheosis/names.cfg
@@ -180,6 +180,84 @@ armors {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:abyssal_boots
+    #  [default: ]
+    S:aquamirae_abyssal_boots <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:abyssal_brigantine
+    #  [default: ]
+    S:aquamirae_abyssal_brigantine <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:abyssal_heaume
+    #  [default: ]
+    S:aquamirae_abyssal_heaume <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:abyssal_leggings
+    #  [default: ]
+    S:aquamirae_abyssal_leggings <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:abyssal_tiara
+    #  [default: ]
+    S:aquamirae_abyssal_tiara <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:terrible_boots
+    #  [default: ]
+    S:aquamirae_terrible_boots <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:terrible_chestplate
+    #  [default: ]
+    S:aquamirae_terrible_chestplate <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:terrible_helmet
+    #  [default: ]
+    S:aquamirae_terrible_helmet <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:terrible_leggings
+    #  [default: ]
+    S:aquamirae_terrible_leggings <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:three_bolt_boots
+    #  [default: ]
+    S:aquamirae_three_bolt_boots <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:three_bolt_helmet
+    #  [default: ]
+    S:aquamirae_three_bolt_helmet <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:three_bolt_leggings
+    #  [default: ]
+    S:aquamirae_three_bolt_leggings <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:three_bolt_suit
+    #  [default: ]
+    S:aquamirae_three_bolt_suit <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
     # Items in this group: byg:ametrine_helmet, byg:ametrine_chestplate, byg:ametrine_leggings, byg:ametrine_boots
     #  [default: ]
     S:byg_ametrine_helmet <
@@ -196,70 +274,26 @@ armors {
     #  [default: ]
     S:longfallboots_longfallboots <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:abyssal_boots
-    #  [default: ]
     S:ob_aquamirae_abyssal_boots <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:abyssal_chestplate
-    #  [default: ]
     S:ob_aquamirae_abyssal_chestplate <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:abyssal_extra_helmet
-    #  [default: ]
     S:ob_aquamirae_abyssal_extra_helmet <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:abyssal_helmet
-    #  [default: ]
     S:ob_aquamirae_abyssal_helmet <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:abyssal_leggings
-    #  [default: ]
     S:ob_aquamirae_abyssal_leggings <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:terrible_boots
-    #  [default: ]
     S:ob_aquamirae_terrible_boots <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:terrible_chestplate
-    #  [default: ]
     S:ob_aquamirae_terrible_chestplate <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:terrible_helmet
-    #  [default: ]
     S:ob_aquamirae_terrible_helmet <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:terrible_leggings
-    #  [default: ]
     S:ob_aquamirae_terrible_leggings <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:three_bolt_chestplate
-    #  [default: ]
     S:ob_aquamirae_three_bolt_chestplate <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:three_bolt_helmet
-    #  [default: ]
     S:ob_aquamirae_three_bolt_helmet <
      >
 
@@ -997,7 +1031,7 @@ items {
 
 tools {
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:diamond_sword, minecraft:diamond_shovel, minecraft:diamond_pickaxe, minecraft:diamond_axe, minecraft:diamond_hoe, twilightforest:diamond_minotaur_axe, twilightforest:mazebreaker_pickaxe
+    # Items in this group: easypaxellite:diamond_paxel
     #  [default: ]
     S:DIAMOND <
      >
@@ -1039,7 +1073,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:iron_sword, minecraft:iron_shovel, minecraft:iron_pickaxe, minecraft:iron_axe, minecraft:iron_hoe, malum:crude_scythe, malum:creative_scythe
+    # Items in this group: easypaxellite:iron_paxel
     #  [default: ]
     S:IRON <
      >
@@ -1051,7 +1085,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: easypaxellite:netherite_paxel
+    # Items in this group: minecraft:netherite_sword, minecraft:netherite_shovel, minecraft:netherite_pickaxe, minecraft:netherite_axe, minecraft:netherite_hoe
     #  [default: ]
     S:NETHERITE <
      >
@@ -1069,7 +1103,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:stone_sword, minecraft:stone_shovel, minecraft:stone_pickaxe, minecraft:stone_axe, minecraft:stone_hoe
+    # Items in this group: easypaxellite:stone_paxel
     #  [default: ]
     S:STONE <
      >
@@ -1087,7 +1121,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:wooden_sword, minecraft:wooden_shovel, minecraft:wooden_pickaxe, minecraft:wooden_axe, minecraft:wooden_hoe
+    # Items in this group: easypaxellite:wood_paxel
     #  [default: ]
     S:WOOD <
      >
@@ -1123,6 +1157,72 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:coral_lance
+    #  [default: ]
+    S:aquamirae_coral_lance <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:dagger_of_greed
+    #  [default: ]
+    S:aquamirae_dagger_of_greed <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:divider
+    #  [default: ]
+    S:aquamirae_divider <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:fin_cutter
+    #  [default: ]
+    S:aquamirae_fin_cutter <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:maze_rose
+    #  [default: ]
+    S:aquamirae_maze_rose <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:poisoned_blade
+    #  [default: ]
+    S:aquamirae_poisoned_blade <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:poisoned_chakra
+    #  [default: ]
+    S:aquamirae_poisoned_chakra <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:remnants_saber
+    #  [default: ]
+    S:aquamirae_remnants_saber <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:sweet_lance
+    #  [default: ]
+    S:aquamirae_sweet_lance <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:terrible_sword
+    #  [default: ]
+    S:aquamirae_terrible_sword <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: aquamirae:whisper_of_the_abyss
+    #  [default: ]
+    S:aquamirae_whisper_of_the_abyss <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
     # Items in this group: botania:glass_pickaxe
     #  [default: ]
     S:botania_glass_pickaxe <
@@ -1133,64 +1233,24 @@ tools {
     #  [default: ]
     S:byg_pendorite_axe <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:coral_lance
-    #  [default: ]
     S:ob_aquamirae_coral_lance <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:dagger_of_greed
-    #  [default: ]
     S:ob_aquamirae_dagger_of_greed <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:divider
-    #  [default: ]
     S:ob_aquamirae_divider <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:fin_cutter
-    #  [default: ]
     S:ob_aquamirae_fin_cutter <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:maze_rose
-    #  [default: ]
     S:ob_aquamirae_maze_rose <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:poisoned_blade
-    #  [default: ]
     S:ob_aquamirae_poisoned_blade <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:poisoned_chakra
-    #  [default: ]
     S:ob_aquamirae_poisoned_chakra <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:remnants_saber
-    #  [default: ]
     S:ob_aquamirae_remnants_saber <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:terrible_sword
-    #  [default: ]
     S:ob_aquamirae_terrible_sword <
      >
-
-    # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: ob_aquamirae:whisper_of_the_abyss
-    #  [default: ]
     S:ob_aquamirae_whisper_of_the_abyss <
      >
 
