--- a/teoe-quintessence/configs/apotheosis/adventure.cfg
+++ b/teoe-quintessence/configs/apotheosis/adventure.cfg
@@ -11,7 +11,7 @@ affixes {
         .*|0.85
      >
 
-    # Dimenaional rarities for affix conversion (see "Affix Convert Loot Rules"), in the form of dimension|min|max. A dimension not listed uses all rarities. [default: [overworld|common|rare], [the_nether|uncommon|epic], [the_end|rare|mythic], [twilightforest:twilight_forest|uncommon|epic]]
+    # Dimensional rarities for affix conversion (see "Affix Convert Loot Rules"), in the form of dimension|min|max. A dimension not listed uses all rarities. [default: [overworld|common|rare], [the_nether|uncommon|epic], [the_end|rare|mythic], [twilightforest:twilight_forest|uncommon|epic]]
     S:"Affix Convert Rarities" <
         overworld|common|rare
         the_nether|uncommon|epic
