--- a/teoe-quintessence/defaultconfigs/lightmanscurrency-server.toml
+++ b/teoe-quintessence/defaultconfigs/lightmanscurrency-server.toml
@@ -13,7 +13,10 @@
 	canMintCoins = false
 	#Determines whether or not coins can be melted back into their source material in the Coin Minting Machine.
 	canMeltCoins = false
-
+	#Whether illegally broken traders (such as being replaced with /setblock, or modded machines that break blocks) will safely eject their block/contents into a temporary storage area for the owner to collect safely.
+	#If disabled, illegally broken traders will throw their items on the ground, and can thus be griefed by modded machines.
+	ejectIllegalBreaks = true
+	
 	#Specific Coin Minting Settings.
 	[server.coin_minting]
 		#Whether copper coins can be minted.
@@ -114,6 +117,9 @@
 		#The maximum number of days an auction can be carried out.
 		#Range: > 1
 		maxDuration = 30
+		#The minimum number of days an auction can be carried out.
+		#Range: > 0
+		minDuration = 0
 
 	#Discord bot settings. Requires lightmansdiscord v0.0.3.0+ to use.
 	[server.discord]
