--- a/teoe-quintessence/configs/apotheosis/names.cfg
+++ b/teoe-quintessence/configs/apotheosis/names.cfg
@@ -114,7 +114,7 @@ armors {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:leather_helmet, minecraft:leather_chestplate, minecraft:leather_leggings, minecraft:leather_boots, quark:forgotten_hat, quark:backpack
+    # Items in this group: minecraft:leather_helmet, minecraft:leather_chestplate, minecraft:leather_leggings, minecraft:leather_boots, quark:backpack, quark:forgotten_hat
     #  [default: ]
     S:LEATHER <
      >
@@ -1031,7 +1031,7 @@ items {
 
 tools {
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: easypaxellite:diamond_paxel
+    # Items in this group: minecraft:diamond_sword, minecraft:diamond_shovel, minecraft:diamond_pickaxe, minecraft:diamond_axe, minecraft:diamond_hoe, twilightforest:diamond_minotaur_axe, twilightforest:mazebreaker_pickaxe, farmersdelight:diamond_knife
     #  [default: ]
     S:DIAMOND <
      >
@@ -1085,7 +1085,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:netherite_sword, minecraft:netherite_shovel, minecraft:netherite_pickaxe, minecraft:netherite_axe, minecraft:netherite_hoe
+    # Items in this group: minecraft:netherite_sword, minecraft:netherite_shovel, minecraft:netherite_pickaxe, minecraft:netherite_axe, minecraft:netherite_hoe, farmersdelight:netherite_knife
     #  [default: ]
     S:NETHERITE <
      >
@@ -1097,7 +1097,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: malum:soul_stained_steel_scythe, malum:soul_stained_steel_sword, malum:soul_stained_steel_pickaxe, malum:soul_stained_steel_axe, malum:soul_stained_steel_shovel, malum:soul_stained_steel_hoe
+    # Items in this group: malum:soul_stained_steel_scythe, malum:soul_stained_steel_sword, malum:soul_stained_steel_pickaxe, malum:soul_stained_steel_axe, malum:soul_stained_steel_shovel, malum:soul_stained_steel_hoe, malum:soul_stained_steel_knife
     #  [default: ]
     S:SOUL_STAINED_STEEL <
      >
@@ -1121,7 +1121,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: easypaxellite:wood_paxel
+    # Items in this group: minecraft:wooden_sword, minecraft:wooden_shovel, minecraft:wooden_pickaxe, minecraft:wooden_axe, minecraft:wooden_hoe
     #  [default: ]
     S:WOOD <
      >
@@ -1232,6 +1232,22 @@ tools {
     # Items in this group: byg:pendorite_axe, byg:pendorite_pickaxe, byg:pendorite_sword, byg:pendorite_battleaxe, byg:pendorite_shovel, byg:pendorite_hoe
     #  [default: ]
     S:byg_pendorite_axe <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: farmersdelight:flint_knife
+    #  [default: ]
+    S:farmersdelight_flint_knife <
+     >
+    S:nourished_nether_necronium_axe <
+     >
+    S:nourished_nether_necronium_hoe <
+     >
+    S:nourished_nether_necronium_pickaxe <
+     >
+    S:nourished_nether_necronium_shovel <
+     >
+    S:nourished_nether_necronium_sword <
      >
     S:ob_aquamirae_coral_lance <
      >
