--- a/teoe-quintessence/configs/apotheosis/village.cfg
+++ b/teoe-quintessence/configs/apotheosis/village.cfg
@@ -6,7 +6,7 @@
 
 arrows {
     # If explosive arrows can break blocks. [default: true]
-    B:"Explosive Arrow Block Damage"=true
+    B:"Explosive Arrow Block Damage"=false
 }
 
 
