--- a/teoe-quintessence/configs/apotheosis/adventure.cfg
+++ b/teoe-quintessence/configs/apotheosis/adventure.cfg
@@ -25,9 +25,9 @@ affixes {
     # The pattern MUST be a valid regex string, and should match the paths of desired loot tables under the specified domain.  Note: "Match Any Character" is ".*" (dot star) and not "*" (star).
     # If there is a match, an item has a chance to spawn in that loot table. [default: [minecraft:chests.*|0.5], [.*chests.*|0.35], [twilightforest:structures.*|0.4]]
     S:"Affix Item Loot Rules" <
-        minecraft:chests.*|0.05
-        .*chests.*|0.05
-        twilightforest:structures.*|0.1
+        .*chests.*|0.03
+        minecraft:chests.*|0.03
+        twilightforest:structures.*|0.07
      >
 
     # If affixes that cleave can hit players (excluding the user). [default: false]
@@ -45,10 +45,10 @@ affixes {
     S:"Gem Boss Bonus"=0.33
 
     # The chance that a mob will drop a gem. 0 = 0%, 1 = 100% [range: 0.0 ~ 1.0, default: 0.045]
-    S:"Gem Drop Chance"=0.045
+    S:"Gem Drop Chance"=0.01
 
     # The chance that a naturally spawned mob will be granted an affix item. 0 = 0%, 1 = 100% [range: 0.0 ~ 1.0, default: 0.24]
-    S:"Random Affix Chance"=0.03
+    S:"Random Affix Chance"=0.025
 
     # The item that will be used when attempting to place torches with the torch placer affix.  Must be a valid item that places a block on right click. [default: minecraft:torch]
     S:"Torch Placement Item"=minecraft:torch
@@ -75,20 +75,20 @@ bosses {
         minecraft:overworld|0.02|NEEDS_SKY
         minecraft:the_nether|0.03|ANY
         minecraft:the_end|0.02|NEEDS_SURFACE
-        twilightforest:twilight_forest|0.05|NEEDS_SURFACE
+        twilightforest:twilight_forest|0.05|ANY
      >
 
     # If boss items are always cursed.  Enable this if you want bosses to be less overpowered by always giving them a negative effect. [default: false]
-    B:"Curse Boss Items"=false
+    B:"Curse Boss Items"=true
 }
 
 
 gems {
     # Loot Rules, in the form of Loot Table Matchers, permitting gems to spawn in loot tables.  See comment on "Affix Item Loot Rules" for description. [default: [minecraft:chests.*|0.30], [.*chests.*|0.15], [twilightforest:structures.*|0.20]]
     S:"Gem Loot Rules" <
-        minecraft:chests.*|0.30
-        .*chests.*|0.15
-        twilightforest:structures.*|0.20
+        .*chests.*|0.05
+        minecraft:chests.*|0.05
+        twilightforest:structures.*|0.1
      >
 }
 
@@ -100,6 +100,18 @@ rarities {
     # The weight of this rarity.  The chance of this rarity appearing is <weight>/<total weight>. [range: 0 ~ 10000, default: 400]
     I:"common weight"=400
 
+    # The quality of this rarity.  Each point of luck increases the weight of this rarity by the quality value. [range: 0.0 ~ 100.0, default: 1.5]
+    S:"uncommon quality"=1.5
+
+    # The weight of this rarity.  The chance of this rarity appearing is <weight>/<total weight>. [range: 0 ~ 10000, default: 320]
+    I:"uncommon weight"=320
+	
+    # The quality of this rarity.  Each point of luck increases the weight of this rarity by the quality value. [range: 0.0 ~ 100.0, default: 3.0]
+    S:"rare quality"=3.0
+
+    # The weight of this rarity.  The chance of this rarity appearing is <weight>/<total weight>. [range: 0 ~ 10000, default: 150]
+    I:"rare weight"=150
+	
     # The quality of this rarity.  Each point of luck increases the weight of this rarity by the quality value. [range: 0.0 ~ 100.0, default: 4.5]
     S:"epic quality"=4.5
 
@@ -111,24 +123,12 @@ rarities {
 
     # The weight of this rarity.  The chance of this rarity appearing is <weight>/<total weight>. [range: 0 ~ 10000, default: 40]
     I:"mythic weight"=40
-
-    # The quality of this rarity.  Each point of luck increases the weight of this rarity by the quality value. [range: 0.0 ~ 100.0, default: 3.0]
-    S:"rare quality"=3.0
-
-    # The weight of this rarity.  The chance of this rarity appearing is <weight>/<total weight>. [range: 0 ~ 10000, default: 150]
-    I:"rare weight"=150
-
-    # The quality of this rarity.  Each point of luck increases the weight of this rarity by the quality value. [range: 0.0 ~ 100.0, default: 1.5]
-    S:"uncommon quality"=1.5
-
-    # The weight of this rarity.  The chance of this rarity appearing is <weight>/<total weight>. [range: 0 ~ 10000, default: 320]
-    I:"uncommon weight"=320
 }
 
 
 spawners {
     # The chance that a Rogue Spawner has a "valuable" chest instead of a standard one. 0 = 0%, 1 = 100% [range: 0.0 ~ 1.0, default: 0.11]
-    S:"Spawner Value Chance"=0.11
+    S:"Spawner Value Chance"=0.1
 }
 
 
@@ -156,6 +156,7 @@ worldgen {
     # The dimensions that the deadly module will generate in. [default: [overworld]]
     S:"Generation Dimension Whitelist" <
         overworld
+		the_bumblezone
      >
 
     # The number of rogue spawner generation attempts per-chunk. [range: 0 ~ 256, default: 4]
