--- a/teoe-quintessence/defaultconfigs/thermal-server.toml
+++ b/teoe-quintessence/defaultconfigs/thermal-server.toml
@@ -14,7 +14,7 @@
 	[Dynamos.Magmatic]
 		#This sets the base power generation (RF/t) for the Magmatic Dynamo.
 		#Range: 10 ~ 200
-		"Base Power" = 40
+		"Base Power" = 50
 
 	[Dynamos.Numismatic]
 		#This sets the base power generation (RF/t) for the Numismatic Dynamo.
@@ -34,7 +34,7 @@
 	[Dynamos.Gourmand]
 		#This sets the base power generation (RF/t) for the Gourmand Dynamo.
 		#Range: 10 ~ 200
-		"Base Power" = 50
+		"Base Power" = 40
 
 [Machines]
 
@@ -108,6 +108,11 @@
 		#Range: 1 ~ 200
 		"Base Power" = 20
 
+	[Machines.Crystallizer]
+		#This sets the base power consumption (RF/t) for the Crystallizer.
+		#Range: 1 ~ 200
+		"Base Power" = 5
+
 ["Global Options"]
 	#If TRUE, Redstone Flux will act as its own energy system and will NOT be interoperable with 'Forge Energy' - only enable this if you absolutely know what you are doing and want the Thermal Series to use a unique energy system.
 	"Standalone Redstone Flux" = false
@@ -128,42 +133,6 @@
 	"Blocks Retain Side Configuration" = true
 	#If TRUE, Thermal Blocks will retain Transfer Control configuration when dropped.
 	"Blocks Retain Transfer Control" = true
-
-[Features]
-	#If TRUE, various 'Vanilla+' Blocks and Recipes are enabled.
-	"Vanilla+" = true
-	#If TRUE, Rockwool Blocks and Recipes are enabled.
-	Rockwool = true
-
-	[Features.Tools]
-		#If TRUE, the Crescent Hammer is enabled.
-		Wrench = true
-		#If TRUE, the Redprint is enabled.
-		Redprint = true
-		#If TRUE, the Capacitato is enabled.
-		"RF Potato" = true
-		#If TRUE, the Insightful Crystal is enabled.
-		"XP Crystal" = true
-		#If TRUE, the Signalum Security Lock is enabled.
-		Lock = true
-		#If TRUE, the Remote Detonator is enabled.
-		Detonator = true
-
-		[Features.Tools.Satchel]
-			#If TRUE, the Satchel is enabled.
-			Satchel = true
-			#A list of Items by Resource Location which are NOT allowed in Satchels.
-			Denylist = ["thermal:satchel", "minecraft:shulker_box", "minecraft:white_shulker_box", "minecraft:orange_shulker_box", "minecraft:magenta_shulker_box", "minecraft:light_blue_shulker_box", "minecraft:yellow_shulker_box", "minecraft:lime_shulker_box", "minecraft:pink_shulker_box", "minecraft:gray_shulker_box", "minecraft:light_gray_shulker_box", "minecraft:cyan_shulker_box", "minecraft:purple_shulker_box", "minecraft:blue_shulker_box", "minecraft:brown_shulker_box", "minecraft:green_shulker_box", "minecraft:red_shulker_box", "minecraft:black_shulker_box"]
-
-	[Features.Mobs]
-		#If TRUE, the Basalz Mob is enabled.
-		Basalz = true
-		#If TRUE, the Blitz Mob is enabled.
-		Blitz = true
-		#If TRUE, the Blizz Mob is enabled.
-		Blizz = true
-		#If TRUE, the Blitz can occasionally call down lightning bolts.
-		"Blitz Lightning" = true
 
 [Augments]
 	#If TRUE, Side Reconfiguration is enabled by default on most augmentable blocks which support it.
@@ -216,6 +185,8 @@
 	"Redstone Mushroom Light" = true
 	#If TRUE, Fluxtooth Mushrooms emit a redstone signal when fully grown. Disabling this may improve performance.
 	"Redstone Mushroom Signal" = true
+	#If TRUE, some Thermal Cultivation seeds will be able to drop from grass. Disabling this will ignore any datapack setting using Thermal's 'seeds_from_grass' Global Loot Modifier.
+	"Drop Seeds From Grass" = true
 
 [Tools]
 
@@ -262,4 +233,18 @@
 		"Allow Fake Players" = false
 		#If TRUE, the Watering Can consumes source blocks when refilling.
 		"Consume Source Blocks" = true
+
+	[Tools.Satchel]
+		#A list of Items by Resource Location which are NOT allowed in Satchels.
+		Denylist = ["thermal:satchel", "minecraft:shulker_box", "minecraft:white_shulker_box", "minecraft:orange_shulker_box", "minecraft:magenta_shulker_box", "minecraft:light_blue_shulker_box", "minecraft:yellow_shulker_box", "minecraft:lime_shulker_box", "minecraft:pink_shulker_box", "minecraft:gray_shulker_box", "minecraft:light_gray_shulker_box", "minecraft:cyan_shulker_box", "minecraft:purple_shulker_box", "minecraft:blue_shulker_box", "minecraft:brown_shulker_box", "minecraft:green_shulker_box", "minecraft:red_shulker_box", "minecraft:black_shulker_box"]
+
+[Mobs]
+	#If TRUE, the Basalz Mob is enabled.
+	Basalz = true
+	#If TRUE, the Blitz Mob is enabled.
+	Blitz = true
+	#If TRUE, the Blizz Mob is enabled.
+	Blizz = true
+	#If TRUE, the Blitz can occasionally call down lightning bolts.
+	"Blitz Lightning" = true
 
